<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="handler" type="com.onix.recorder.lame.activity.SettingsActivity"/>
        <variable name="config" type="com.onix.recorder.lame.data.model.ApplicationConfig"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_main_purple"
            android:elevation="4dp">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/sel_btn_actionbar"
                android:onClick="@{() -> handler.finish()}"
                android:padding="@dimen/actionbar_btn_back_padding"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_arrow_back"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@+id/ivBack"
                android:text="@string/settings"
                android:textColor="@color/color_white"
                android:textSize="16sp"/>

        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_settings_height"
            android:background="@drawable/sel_item_white"
            android:onClick="@{() -> handler.storageChooser.show()}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="@dimen/item_settings_padding_left_right"
                android:paddingRight="@dimen/item_settings_padding_left_right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/settings_saving_path"
                    android:textColor="@color/color_main_title"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@{handler.pathObservable.get()}"
                    android:textColor="@color/color_main_subtitle"
                    android:textSize="12sp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_gravity="bottom"
                android:background="@color/color_main_divider"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_settings_height"
            android:background="@drawable/sel_item_white"
            android:onClick="@{() -> handler.showId3TagsDialog()}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="@dimen/item_settings_padding_left_right"
                android:paddingRight="@dimen/item_settings_padding_left_right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/settings_setup_id3tags_title"
                    android:textColor="@color/color_main_title"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/settings_setup_id3tags_subtitle"
                    android:textColor="@color/color_main_subtitle"
                    android:textSize="12sp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_gravity="bottom"
                android:background="@color/color_main_divider"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_settings_height"
            android:background="@drawable/sel_item_white"
            android:onClick="@{() -> handler.changeBitrate()}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="@dimen/item_settings_padding_left_right"
                android:paddingRight="@dimen/item_settings_padding_left_right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/settings_bitrate"
                    android:textColor="@color/color_main_title"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/tvBitrate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@{handler.bitrateObservable}"
                    android:textColor="@color/color_main_subtitle"
                    android:textSize="12sp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_gravity="bottom"
                android:background="@color/color_main_divider"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_settings_height"
            android:background="@drawable/sel_item_white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/item_settings_padding_left_right"
                android:paddingRight="@dimen/item_settings_padding_left_right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:maxLines="1"
                    android:text="@string/settings_embedded_player"
                    android:textColor="@color/color_main_title"
                    android:textSize="15sp"/>

                <CheckBox
                    android:id="@+id/chbUseEmbeddedPlayer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:button="@drawable/sel_checkbox_blue"
                    android:checked="@={handler.useEmbeddedPlayerObservable}"
                    android:scaleX="0.4"
                    android:scaleY="0.4"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_gravity="bottom"
                android:background="@color/color_main_divider"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_settings_height"
            android:background="@drawable/sel_item_white"
            android:onClick="@{() -> handler.openLameWeb()}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="@dimen/item_settings_padding_left_right"
                android:paddingRight="@dimen/item_settings_padding_left_right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/settings_powered_by_lame"
                    android:textColor="@color/color_main_title"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/tvLameUrl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/settings_powered_by_lame_url"
                    android:textColor="@color/color_main_url"
                    android:textSize="12sp"
                    android:textStyle="italic"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_gravity="bottom"
                android:background="@color/color_main_divider"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_settings_height"
            android:background="@drawable/sel_item_white"
            android:onClick="@{() -> handler.openPlaymarketUrl()}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="@dimen/item_settings_padding_left_right"
                android:paddingRight="@dimen/item_settings_padding_left_right">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/settings_powered_by_onix"
                    android:textColor="@color/color_main_title"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/tvPlayMarketUrl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textColor="@color/color_main_url"
                    android:textSize="12sp"
                    android:textStyle="italic"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_gravity="bottom"
                android:background="@color/color_main_divider"/>

        </FrameLayout>

    </LinearLayout>

</layout>